<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackgroundLight"
    android:orientation="vertical"
    tools:context=".AuthActivity">

    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="Theme" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/amarante"
        android:text="@string/SingIn"
        android:textColor="#fdfdfd"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userLoginAuth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/input_login"
        android:inputType="text"
        android:textColor="#fdfdfd"
        android:textColorHint="#6a6a6a"

        />


    <EditText
        android:id="@+id/userPasswordAuth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="#fdfdfd"
        android:textColorHint="#6a6a6a" />

    <Button
        android:id="@+id/buttonAuth"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/SingIn"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/linkToReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="monospace"
        android:text="@string/singUp"
        android:textColor="#fdfdfd"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonRu"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"

        android:text="Русский"
        android:textSize="16dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonEn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="English"
        android:textSize="16dp"
        android:textStyle="bold" />

</LinearLayout>