<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackgroundLight"
    tools:context=".NewsActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/amarante"
        android:text="@string/news"
        android:textColor="#fdfdfd"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newsList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonResult" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newsList"
        android:layout_width="371dp"
        android:layout_height="558dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonPilots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/pilots"
        android:textSize="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/results"
        android:textSize="9dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonCalendar"
        app:layout_constraintStart_toEndOf="@+id/buttonMedia"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/calendar"
        android:textSize="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/media"
        android:textSize="9dp"
        app:layout_constraintStart_toEndOf="@+id/buttonPilots"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonRu"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="Русский"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newsList"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonEn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="English"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newsList"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>