<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackgroundLight"
    android:orientation="vertical"
    tools:context=".CalendarActivity">



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar"
        android:textColor="#fdfdfd"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calendarList"
        app:layout_constraintEnd_toStartOf="@+id/buttonNews"
        app:layout_constraintStart_toEndOf="@+id/buttonMedia"
        app:layout_constraintTop_toBottomOf="@+id/buttonMedia" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarList"
        android:layout_width="371dp"
        android:layout_height="558dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:text="Dark/Light"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/calendarList"
        tools:layout_editor_absoluteX="-5dp" />

    <Button
        android:id="@+id/buttonPilots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"

        android:text="@string/pilots"
        android:textSize="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"

        android:text="@string/results"
        android:textSize="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"

        android:text="@string/media"
        android:textSize="9dp"
        app:layout_constraintStart_toEndOf="@id/buttonPilots"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"

        android:text="@string/news"
        android:textSize="9dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonResult"
        app:layout_constraintStart_toEndOf="@+id/buttonMedia"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRu"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"

        android:text="Русский"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calendarList"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonEn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"

        android:text="English"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calendarList"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>