<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackgroundLight"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/amarante"
        android:text="@string/results_2023"
        android:textColor="#fdfdfd"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/resultList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPilots" />

    <Button
        android:id="@+id/buttonNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        android:text="@string/news"
        android:textSize="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPilots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/pilots"
        android:textSize="9dp"
        app:layout_constraintStart_toEndOf="@+id/buttonNews"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/media"
        android:textSize="9dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonCalendar"
        app:layout_constraintStart_toEndOf="@+id/buttonPilots"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/calendar"
        android:textSize="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultList"
        android:layout_width="373dp"
        android:layout_height="508dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="25dp"
        android:rotationX="0"
        android:background="#1f2021"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2023"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="2023"
        android:textSize="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2022"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="2022"
        android:textSize="9dp"
        app:layout_constraintEnd_toStartOf="@+id/button2021"
        app:layout_constraintStart_toEndOf="@+id/button2023"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2021"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="2021"
        android:textSize="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonRu"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="Русский"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/resultList"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonEn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="English"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/resultList"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>